--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 <body>
 	<noscript>You need to enable JavaScript to run this app.</noscript>
 	<div id="root"></div>
-	<script type="text/javascript" src="../src/index.js"></script>
+	<script type="text/babel" src="../src/index.js"></script>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
